[workspace]
members = [
    "packages/bundle",
    "packages/types",
    "packages/protos",
    "packages/tests",
]
resolver = "2"

[workspace.package]
version         = "0.1.0"
edition         = "2021"
readme          = "README.md"
repository      = "https://github.com/MegaRockLabs/cw-auths"
description     = "CosmWasm authentication kit"
authors         = [ "Kromsten <kromsten@megarock.app>" ]
license         = "MIT"


[workspace.dependencies]
smart-account-auth      = { version = "0.25.0", features = ["types", "traits"] }
saa-schema              = { version = "0.25.1", features = ["cosmwasm"]  }


saa-wasm                = { path = "packages/bundle", version = "0.1.0" }
types                   = { path = "packages/types",  package = "saa-wasm-types", version = "0.1.0" }
protos                  = { path = "packages/protos", package = "saa-wasm-protos", version = "0.1.0" }


[profile.release.package.saa-wasm]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false