[workspace]
members = [
    "packages/bundle",
    "packages/types",
    "packages/protos",
    "packages/tests",
]
resolver = "2"

[workspace.package]
version         = "0.1.0-alpha.1"
edition         = "2021"
readme          = "README.md"
repository      = "https://github.com/MegaRockLabs/cw-auths"
description     = "CosmWasm authentication kit"
authors         = [ "Kromsten <kromsten@megarock.app>" ]
license         = "MIT"


[workspace.dependencies]
smart-account-auth      = { version = "0.26.0-rc2", features = ["types"], path = "../contract-auth/packages/bundle" }
saa-schema              = { version = "0.26.0", features = ["cosmwasm"] , path = "../contract-auth/packages/schema" }

saa-wasm                = { path = "packages/bundle", default-features = true, version = "0.1.0-alpha.1" }
types                   = { path = "packages/types",  default-features = true, package = "saa-wasm-types", version = "0.1.0-alpha.1" }
protos                  = { path = "packages/protos", default-features = true, package = "saa-wasm-protos", version = "0.1.0-alpha.1" }


[profile.release.package.saa-wasm]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false